Shenandoah: assertion failure with -XX:-ResizeTLAB

XMLWordPrintable

    • gc
    • b06

        This is caused by recent refactoring, JDK-8247845. Reproduces on tier1 tests with Shenandoah:

        $ CONF=linux-x86_64-server-fastdebug make images run-test TEST=jdk/jfr/event/compiler/TestAllocInNewTLAB.java TEST_VM_OPTS="-XX:+UseShenandoahGC"

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahHeap.cpp:1109), pid=310856, tid=310864
        # assert(!resize || ResizeTLAB) failed: Only call for resize when ResizeTLAB is enabled
        #
        # Problematic frame:
        # V [libjvm.so+0x16603a4] ShenandoahHeap::gclabs_retire(bool)+0x2b4

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: