8249230: Shenandoah: assertion failure with -XX:-ResizeTLAB

Reviewed-by: rkennke